Deep rewrite ZGC document based on HotSpot source (268 → 1447 lines)
- Colored pointers: 16 metadata bits layout from zAddress.hpp
- Page types: Small=2MB, Medium=dynamic, Large=N*2MB from zGlobals
- Load barrier: fast/slow path, self-healing CAS from zBarrier
- Store barrier: generational mode write barrier from zBarrierSet
- Young GC: 8 phases from ZStatPhase declarations
- Old GC: 10 phases with concurrent marking/relocation
- Generational ZGC (JEP 439): remembered sets from zRemembered
- JEP evolution: 333→351→364/365→377→439→474→490 (7 JEPs)
- Page ages: eden through survivor14 to old from zPageAge
- Tuning parameters with defaults from source
- vs G1 vs Shenandoah comparison table
- Source navigation: 20+ entry file mapping

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>